<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/t_b_paddingtextview"
        android:text="@string/nointernet"
        android:textColor="@color/color_title_textview_itemnews"
        android:textSize="@dimen/textsize_textview_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tryagain_button_state"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/color_title_textview_itemnews" />

        <Button
            android:id="@+id/btnSettingInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tryagain_button_state"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:layout_marginStart="10dp"
            android:textColor="@color/color_title_textview_itemnews" />
    </LinearLayout>

</LinearLayout>